--- a/cubic_potts_system.ipynb
+++ b/cubic_potts_system.ipynb
@@ -14,7 +14,7 @@
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format='retina'\n",
     "\n",
-    "import potts_renormalization as rg"
+    "from renormalization import potts_renormalization as rg"
    ]
   },
   {
