Add clock model renormalization functions and update files accordingly

--- a/cubic_clock_system.ipynb
+++ b/cubic_clock_system.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3a875141-14fe-4f44-8206-38fb5d758ce6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (clock_renormalization.py, line 46)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "\u001b[0m  File \u001b[1;32m~/anaconda3/envs/phase-transitions/lib/python3.12/site-packages/IPython/core/interactiveshell.py:3553\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 8\u001b[0;36m\n\u001b[0;31m    from renormalization import clock_renormalization\u001b[0;36m\n",
+      "\u001b[0;36m  File \u001b[0;32m~/Documents/GitHub/cubic-spin-systems/renormalization/clock_renormalization.py:46\u001b[0;36m\u001b[0m\n\u001b[0;31m    return t\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import mpmath as mp\n",
@@ -14,8 +26,69 @@
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format='retina'\n",
     "\n",
-    "import clock_renormalization as rg"
+    "from renormalization import clock_renormalization"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b894a4f-d0ef-4145-af50-57ecdb1dadd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mp.mp.dps = 20;\n",
+    "mp.mp.pretty = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "466992a4-df34-49fb-be9c-dc0a081c208e",
+   "metadata": {},
+   "source": [
+    "# Renormalization group flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f6d4f4b-7b3c-4626-8d79-52c0024615a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "J = 1\n",
+    "K = 1\n",
+    "\n",
+    "clock = rg.ClockRenormalizationGroup(J, K, method='old')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d72a5763-4670-4fbe-a4df-66d4710ed8dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 25\n",
+    "T = clock.transfer_matrix\n",
+    "T = clock.renormalize(T, n)\n",
+    "print(T, end='\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3fdff05-52b1-43a9-bb2b-03136f5f6068",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faeda3e3-11e4-4484-b064-f1e29be3725a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
