--- a/cubic_clock_system.ipynb
+++ b/cubic_clock_system.ipynb
@@ -26,7 +26,8 @@
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format='retina'\n",
     "\n",
-    "from renormalization import clock_renormalization"
+    "from lib import matrix_manipulation\n",
+    "from lib.renormalization import clock_renormalization"
    ]
   },
   {
@@ -107,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
