--- a/cubic_potts_system.ipynb
+++ b/cubic_potts_system.ipynb
@@ -14,7 +14,8 @@
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format='retina'\n",
     "\n",
-    "from renormalization import potts_renormalization as rg"
+    "from lib import matrix_manipulation\n",
+    "from lib.renormalization import clock_renormalization"
    ]
   },
   {
@@ -231,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
