Make minor improvements

--- a/cubic_clock_system.ipynb
+++ b/cubic_clock_system.ipynb
@@ -8,13 +8,13 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (clock_renormalization.py, line 46)",
+     "evalue": "invalid syntax (clock_renormalization.py, line 45)",
      "output_type": "error",
      "traceback": [
       "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[0m  File \u001b[1;32m~/anaconda3/envs/phase-transitions/lib/python3.12/site-packages/IPython/core/interactiveshell.py:3553\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 8\u001b[0;36m\n\u001b[0;31m    from renormalization import clock_renormalization\u001b[0;36m\n",
-      "\u001b[0;36m  File \u001b[0;32m~/Documents/GitHub/cubic-spin-systems/renormalization/clock_renormalization.py:46\u001b[0;36m\u001b[0m\n\u001b[0;31m    return t\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0m  File \u001b[1;32m~/Documents/GitHub/cubic-spin-systems/.venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py:3577\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 8\u001b[0;36m\n\u001b[0;31m    from lib.renormalization.clock_renormalization import *\u001b[0;36m\n",
+      "\u001b[0;36m  File \u001b[0;32m~/Documents/GitHub/cubic-spin-systems/lib/renormalization/clock_renormalization.py:45\u001b[0;36m\u001b[0m\n\u001b[0;31m    return t\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -26,8 +26,7 @@
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format='retina'\n",
     "\n",
-    "from lib import matrix_manipulation\n",
-    "from lib.renormalization import clock_renormalization"
+    "from lib.renormalization.clock_renormalization import *"
    ]
   },
   {
@@ -108,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
