Make minor local change

--- a/cubic_potts_system.ipynb
+++ b/cubic_potts_system.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "b5c498b1-5b7d-4d85-a986-9fc84bec4a22",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "J = -1.809; K = 0.966\t\t\t\t\t\t\t\t\t\t\t\t\t\r"
+      "CPU times: user 12min 49s, sys: 3.11 s, total: 12min 52s\t\t\t\t\t\t\t\t\t\t\t\t\t\t\n",
+      "Wall time: 12min 53s\n"
      ]
     }
    ],
