--- a/cubic_clock_system.ipynb
+++ b/cubic_clock_system.ipynb
@@ -26,7 +26,7 @@
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format='retina'\n",
     "\n",
-    "from lib.renormalization.clock_renormalization import *"
+    "from lib.renormalization.clock import *"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
