--- a/cubic_potts_system.ipynb
+++ b/cubic_potts_system.ipynb
@@ -14,7 +14,7 @@
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format='retina'\n",
     "\n",
-    "from lib.renormalization.potts_renormalization import *"
+    "from lib.renormalization.potts import *"
    ]
   },
   {
@@ -220,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
