Fix bug and make improvements

--- a/cubic_ising_system.ipynb
+++ b/cubic_ising_system.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "259e51fe-cc0a-441a-9750-cada93b9abf9",
    "metadata": {},
    "outputs": [],
@@ -205,10 +205,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b9c4856c-1c1a-456a-a5de-f5c617e4e61d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.22  0.819]\n",
+      "[0.819   1.22]\n",
+      "\n",
+      "[  1.0  0.871]\n",
+      "[0.871    1.0]\n",
+      "\n",
+      "[  1.0  0.994]\n",
+      "[0.994    1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n",
+      "\n",
+      "[1.0  1.0]\n",
+      "[1.0  1.0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate renormalization group flow\n",
     "matrices = ising.transfer_matrices\n",
@@ -216,9 +317,8 @@
     "\n",
     "for k in range(30):\n",
     "    matrices = ising.renormalize(matrices)\n",
-    "    t = matrix_average(matrices)\n",
     "    print()\n",
-    "    mp.nprint(t, n=3)"
+    "    mp.nprint(matrices[19], n=3)"
    ]
   }
  ],
