Add phase diagram calculations for n=1, 2, and 3

--- a/cubic_ising_phase_diagram.ipynb
+++ b/cubic_ising_phase_diagram.ipynb
@@ -32,13 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "be6f8131-58ca-4acb-87d2-d9b27d34a817",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create model instance\n",
     "J = 2\n",
-    "H = 0\n",
+    "H = 0.1\n",
     "\n",
     "n = 3\n",
     "u = 'x'\n",
@@ -51,32 +52,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "6f0a617c-d585-4cb5-a10d-64e6bbc2eb56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(19, 'unknown')"
+       "(2, 'x_aligned')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ising.phase()"
+    "# Determine phase\n",
+    "k, phase = ising.phase()\n",
+    "print(f\"Phase: {phase}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7da69c9-8fc4-43fc-9700-3a1a7000dfb3",
+   "cell_type": "markdown",
+   "id": "7029e7c3-375a-4730-81f3-b87f1f9b066e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Phase diagram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20ca18a0-850b-404f-94c4-de291a928adf",
+   "metadata": {},
+   "source": [
+    "## Component number n = 1"
+   ]
   },
   {
    "cell_type": "code",
@@ -87,21 +98,24 @@
    "source": [
     "%%time\n",
     "\n",
-    "p = 0.5\n",
-    "fielddir = 'xy'\n",
-    "L = 500\n",
+    "u = 'x'\n",
     "\n",
-    "N = 60\n",
-    "T_values = np.linspace(start=0.01, stop=1.2, num=N)\n",
-    "HJ_values = np.linspace(start=0, stop=0.6, num=N)\n",
+    "p = 0.5\n",
+    "N = 500\n",
+    "\n",
+    "L = 60\n",
+    "T_values = np.linspace(start=0.01, stop=2, num=L)\n",
+    "HJ_values = np.linspace(start=0, stop=2, num=L)\n",
     "\n",
     "disorder, ferro, antiferro, x_aligned, x_antialigned, unknown, undetermined = [],[],[],[],[],[],[]\n",
-    "n = 1 # Component number\n",
     "\n",
-    "for i, T in enumerate(T_values):\n",
-    "    for HJ in HJ_values:\n",
-    "\n",
-    "        k, phase = phase_sink(1/T, HJ/T, n, fielddir, p, L)\n",
+    "for i, T in enumerate(T_values): # Temperature (1/J) values\n",
+    "    for HJ in HJ_values: # H/J values\n",
+    "        \n",
+    "        J = 1 / T\n",
+    "        H = HJ / T\n",
+    "        ising = IsingRenormalizationGroup(J, H, 1, u, p, N)\n",
+    "        k, phase = ising.phase()\n",
     "\n",
     "        if phase == \"disorder\":\n",
     "            disorder.append([HJ, T])\n",
@@ -125,9 +139,16 @@
     "            undetermined.append([HJ, T])\n",
     "            \n",
     "        print(\"T = %.3f; H/J = %.3f; k = %d, phase = %s\" % (T, HJ, k, phase), end='')\n",
-    "        print(\"\\t\\t\\t\", end='\\r')\n",
-    "\n",
-    "\n",
+    "        print(\"\\t\\t\\t\", end='\\r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52cb463d-44db-4154-9bfa-be1caa5699b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Plot the results\n",
     "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(6, 6), dpi=100)\n",
     "fig.set_facecolor(\"white\")\n",
@@ -147,7 +168,103 @@
     "ax.set_ylabel(\"Temperature 1/J\", fontsize=fs)\n",
     "ax.tick_params(axis=\"both\", direction=\"in\", labelbottom=True, labeltop=False, labelleft=True, labelright=False, bottom=True, top=True, left=True, right=True, length=4, width=lw, labelsize=fs)\n",
     "ax.axis([0, 0.08, 0, 0.65])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "656fb95c-9a4f-40fb-b35c-b814bd0519f3",
+   "metadata": {},
+   "source": [
+    "## Component number n = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49ece0b8-1472-4be9-9c16-c3a7d93165e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "p = 0.5\n",
+    "fielddir = 'xy'\n",
+    "L = 500\n",
+    "\n",
+    "N = 60\n",
+    "T_values = np.linspace(start=0.01, stop=1.2, num=N)\n",
+    "HJ_values = np.linspace(start=0, stop=0.6, num=N)\n",
+    "\n",
+    "disorder, ferro, x_aligned, xy_aligned, xory_aligned, xy_alternating, x_antiferro, xory_antiferro, unknown, undetermined = [],[],[],[],[],[],[],[],[],[]\n",
+    "n = 2 # Component number\n",
+    "\n",
+    "for i, T in enumerate(T_values):\n",
+    "    for HJ in HJ_values:\n",
+    "\n",
+    "        k, phase = phase_sink(1/T, HJ/T, n, fielddir, p, L)\n",
+    "\n",
+    "        if phase == \"disorder\":\n",
+    "            disorder.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"ferro\":\n",
+    "            ferro.append([HJ, T])           \n",
+    "\n",
+    "        elif phase == \"x_aligned\":\n",
+    "            x_aligned.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"xy_aligned\":\n",
+    "            xy_aligned.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"xory_aligned\":\n",
+    "            xory_aligned.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"xy_alternating\":\n",
+    "            xy_alternating.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"x_antiferro\":\n",
+    "            x_antiferro.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"xory_antiferro\":\n",
+    "            xory_antiferro.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"unknown\":\n",
+    "            unknown.append([HJ, T])\n",
+    "        \n",
+    "        else:\n",
+    "            undetermined.append([HJ, T])\n",
+    "            \n",
+    "        print(\"T = %.3f; H/J = %.3f; k = %d, phase = %s\" % (T, HJ, k, phase), end='')\n",
+    "        print(\"\\t\\t\\t\", end='\\r')\n",
+    "\n",
+    "\n",
+    "# Plot the results\n",
+    "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(8, 6), dpi=100)\n",
+    "fig.set_facecolor(\"white\")\n",
+    "plt.rc(group=\"font\", family=\"Arial\", weight=\"bold\", size=10)\n",
+    "plt.rc(group=\"lines\", linewidth=1)\n",
+    "plt.rc(group=\"axes\", linewidth=2)\n",
+    "\n",
+    "ms = 4\n",
+    "if disorder: ax.plot(np.array(disorder)[:,0], np.array(disorder)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"disorder\"], mec=cdic[\"disorder\"], ms=ms, alpha=1)\n",
+    "if ferro: ax.plot(np.array(ferro)[:,0], np.array(ferro)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"ferro\"], mec=cdic[\"ferro\"], ms=ms, alpha=1)\n",
+    "if x_aligned: ax.plot(np.array(x_aligned)[:,0], np.array(x_aligned)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"x_aligned\"], mec=cdic[\"x_aligned\"], ms=ms, alpha=1)\n",
+    "if xy_aligned: ax.plot(np.array(xy_aligned)[:,0], np.array(xy_aligned)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"xy_aligned\"], mec=cdic[\"xy_aligned\"], ms=ms, alpha=1)\n",
+    "if xory_aligned: ax.plot(np.array(xory_aligned)[:,0], np.array(xory_aligned)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"xory_aligned\"], mec=cdic[\"xory_aligned\"], ms=ms, alpha=1)\n",
+    "if xy_alternating: ax.plot(np.array(xy_alternating)[:,0], np.array(xy_alternating)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"xy_alternating\"], mec=cdic[\"xy_alternating\"], ms=ms, alpha=1)\n",
+    "if x_antiferro: ax.plot(np.array(x_antiferro)[:,0], np.array(x_antiferro)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"x_antiferro\"], mec=cdic[\"x_antiferro\"], ms=ms, alpha=1)\n",
+    "if xory_antiferro: ax.plot(np.array(xory_antiferro)[:,0], np.array(xory_antiferro)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"xory_antiferro\"], mec=cdic[\"xory_antiferro\"], ms=ms, alpha=1)\n",
+    "if unknown: ax.plot(np.array(unknown)[:,0], np.array(unknown)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"unknown\"], mec=cdic[\"unknown\"], ms=ms, alpha=1)\n",
+    "if undetermined: ax.plot(np.array(undetermined)[:,0], np.array(undetermined)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"undetermined\"], mec=cdic[\"undetermined\"], ms=ms, alpha=1)\n",
+    "#ax.axis([-2,2, -2,2])\n",
+    "ax.set_xlabel(\"Magnetic Field H/J\")\n",
+    "ax.set_ylabel(\"Temperature 1/J\")\n",
+    "ax.tick_params(axis=\"both\", direction=\"in\", width=2, length=4)\n",
+    "fig.tight_layout()\n",
     "plt.show()\n",
+    "\n",
+    "# Note the time when computation finished\n",
+    "datetime.now().strftime('%Y-%m-%d %H:%M:%S')\n",
     "\n",
     "# Send the results as email\n",
     "data_text = f\"\"\"\n",
@@ -160,29 +277,197 @@
     "Phase: ferro\n",
     "{ferro}\n",
     "\n",
-    "Phase: antiferro\n",
-    "{antiferro}\n",
-    "\n",
     "Phase: x_aligned\n",
     "{x_aligned}\n",
     "\n",
-    "Phase: x_antialigned\n",
-    "{x_antialigned}\n",
+    "Phase: xy_aligned\n",
+    "{xy_aligned}\n",
+    "\n",
+    "Phase: xory_aligned\n",
+    "{xory_aligned}\n",
+    "\n",
+    "Phase: xy_alternating\n",
+    "{xy_alternating}\n",
+    "\n",
+    "Phase: x_antiferro\n",
+    "{x_antiferro}\n",
+    "\n",
+    "Phase: xory_antiferro\n",
+    "{xory_antiferro}\n",
     "\n",
     "Phase: unknown\n",
     "{unknown}\n",
     "\n",
     "Phase: undetermined\n",
-    "{undetermined}\"\"\""
+    "{undetermined}\"\"\"\n",
+    "\n",
+    "# Notify with playing a sound and sending an email when the computation is done\n",
+    "sound_path = '/Users/artun/Library/Mobile Documents/com~apple~CloudDocs/Documents/Research/utilities/sounds/alert-short.mp3'\n",
+    "notify(job_name=f\"n{n}_H{fielddir}_p{p}\", figure=fig, data_text=\"\", server='gmail', sound=sound_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6f3e051-7e6d-42aa-9fb9-83e47734955c",
+   "metadata": {},
+   "source": [
+    "## Component number n = 3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52cb463d-44db-4154-9bfa-be1caa5699b2",
+   "id": "8db812e9-7889-4f25-90c9-bb4d93717022",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "\n",
+    "p = 0.5\n",
+    "fielddir = 'xy'\n",
+    "L = 500\n",
+    "\n",
+    "N = 60\n",
+    "T_values = np.linspace(start=0.01, stop=1.2, num=N)\n",
+    "HJ_values = np.linspace(start=0, stop=0.6, num=N)\n",
+    "\n",
+    "disorder, ferro, x_aligned, xy_aligned, xyz_aligned, xory_aligned, xoryorz_aligned, xy_alternating, x_antiferro, xory_antiferro, xoryorz_antiferro, nematic, unknown, undetermined = [],[],[],[],[],[],[],[],[],[],[],[],[],[]\n",
+    "n = 3 # Component number\n",
+    "\n",
+    "for i, T in enumerate(T_values):\n",
+    "    for HJ in HJ_values:\n",
+    "\n",
+    "        k, phase = phase_sink(1/T, HJ/T, n, fielddir, p, L)\n",
+    "\n",
+    "        if phase == \"disorder\":\n",
+    "            disorder.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"ferro\":\n",
+    "            ferro.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"x_aligned\":\n",
+    "            x_aligned.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"xy_aligned\":\n",
+    "            xy_aligned.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"xyz_aligned\":\n",
+    "            xyz_aligned.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"xory_aligned\":\n",
+    "            xory_aligned.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"xoryorz_aligned\":\n",
+    "            xoryorz_aligned.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"xy_alternating\":\n",
+    "            xy_alternating.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"x_antiferro\":\n",
+    "            x_antiferro.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"xory_antiferro\":\n",
+    "            xory_antiferro.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"xoryorz_antiferro\":\n",
+    "            xoryorz_antiferro.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"nematic\":\n",
+    "            nematic.append([HJ, T])\n",
+    "\n",
+    "        elif phase == \"unknown\":\n",
+    "            unknown.append([HJ, T])\n",
+    "        \n",
+    "        else:\n",
+    "            undetermined.append([HJ, T])\n",
+    "            \n",
+    "        print(\"T = %.3f; H/J = %.3f; k = %d, phase = %s\" % (T, HJ, k, phase), end='')\n",
+    "        print(\"\\t\\t\\t\", end='\\r')\n",
+    "\n",
+    "\n",
+    "# Plot the results\n",
+    "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(8, 6), dpi=100)\n",
+    "fig.set_facecolor(\"white\")\n",
+    "plt.rc(group=\"font\", family=\"Arial\", weight=\"bold\", size=10)\n",
+    "plt.rc(group=\"lines\", linewidth=1)\n",
+    "plt.rc(group=\"axes\", linewidth=2)\n",
+    "\n",
+    "ms = 4\n",
+    "if disorder: ax.plot(np.array(disorder)[:,0], np.array(disorder)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"disorder\"], mec=cdic[\"disorder\"], ms=ms, alpha=1)\n",
+    "if ferro: ax.plot(np.array(ferro)[:,0], np.array(ferro)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"ferro\"], mec=cdic[\"ferro\"], ms=ms, alpha=1)\n",
+    "if x_aligned: ax.plot(np.array(x_aligned)[:,0], np.array(x_aligned)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"x_aligned\"], mec=cdic[\"x_aligned\"], ms=ms, alpha=1)\n",
+    "if xy_aligned: ax.plot(np.array(xy_aligned)[:,0], np.array(xy_aligned)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"xy_aligned\"], mec=cdic[\"xy_aligned\"], ms=ms, alpha=1)\n",
+    "if xyz_aligned: ax.plot(np.array(xyz_aligned)[:,0], np.array(xyz_aligned)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"xyz_aligned\"], mec=cdic[\"xyz_aligned\"], ms=ms, alpha=1)\n",
+    "if xory_aligned: ax.plot(np.array(xory_aligned)[:,0], np.array(xory_aligned)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"xory_aligned\"], mec=cdic[\"xory_aligned\"], ms=ms, alpha=1)\n",
+    "if xoryorz_aligned: ax.plot(np.array(xoryorz_aligned)[:,0], np.array(xoryorz_aligned)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"xoryorz_aligned\"], mec=cdic[\"xoryorz_aligned\"], ms=ms, alpha=1)\n",
+    "if xy_alternating: ax.plot(np.array(xy_alternating)[:,0], np.array(xy_alternating)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"xy_alternating\"], mec=cdic[\"xy_alternating\"], ms=ms, alpha=1)\n",
+    "if x_antiferro: ax.plot(np.array(x_antiferro)[:,0], np.array(x_antiferro)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"x_antiferro\"], mec=cdic[\"x_antiferro\"], ms=ms, alpha=1)\n",
+    "if xory_antiferro: ax.plot(np.array(xory_antiferro)[:,0], np.array(xory_antiferro)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"xory_antiferro\"], mec=cdic[\"xory_antiferro\"], ms=ms, alpha=1)\n",
+    "if xoryorz_antiferro: ax.plot(np.array(xoryorz_antiferro)[:,0], np.array(xoryorz_antiferro)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"xoryorz_antiferro\"], mec=cdic[\"xoryorz_antiferro\"], ms=ms, alpha=1)\n",
+    "if nematic: ax.plot(np.array(nematic)[:,0], np.array(nematic)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"nematic\"], mec=cdic[\"nematic\"], ms=ms, alpha=1)\n",
+    "if unknown: ax.plot(np.array(unknown)[:,0], np.array(unknown)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"unknown\"], mec=cdic[\"unknown\"], ms=ms, alpha=1)\n",
+    "if undetermined: ax.plot(np.array(undetermined)[:,0], np.array(undetermined)[:,1], ls=\"\", marker=\"s\", mfc=cdic[\"undetermined\"], mec=cdic[\"undetermined\"], ms=ms, alpha=1)\n",
+    "#ax.axis([-2,2, -2,2])\n",
+    "ax.set_xlabel(\"Magnetic Field H/J\")\n",
+    "ax.set_ylabel(\"Temperature 1/J\")\n",
+    "ax.tick_params(axis=\"both\", direction=\"in\", width=2, length=4)\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Note the time when computation finished\n",
+    "datetime.now().strftime('%Y-%m-%d %H:%M:%S')\n",
+    "\n",
+    "# Send the results as email\n",
+    "data_text = f\"\"\"\n",
+    "\n",
+    "RESULTING DATA\n",
+    "\n",
+    "Phase: disorder\n",
+    "{disorder}\n",
+    "\n",
+    "Phase: ferro\n",
+    "{ferro}\n",
+    "\n",
+    "Phase: x_aligned\n",
+    "{x_aligned}\n",
+    "\n",
+    "Phase: xy_aligned\n",
+    "{xy_aligned}\n",
+    "\n",
+    "Phase: xyz_aligned\n",
+    "{xyz_aligned}\n",
+    "\n",
+    "Phase: xory_aligned\n",
+    "{xory_aligned}\n",
+    "\n",
+    "Phase: xoryorz_aligned\n",
+    "{xoryorz_aligned}\n",
+    "\n",
+    "Phase: xy_alternating\n",
+    "{xy_alternating}\n",
+    "\n",
+    "Phase: x_antiferro\n",
+    "{x_antiferro}\n",
+    "\n",
+    "Phase: xory_antiferro\n",
+    "{xory_antiferro}\n",
+    "\n",
+    "Phase: xoryorz_antiferro\n",
+    "{xoryorz_antiferro}\n",
+    "\n",
+    "Phase: nematic\n",
+    "{nematic}\n",
+    "\n",
+    "Phase: unknown\n",
+    "{unknown}\n",
+    "\n",
+    "Phase: undetermined\n",
+    "{undetermined}\"\"\"\n",
+    "\n",
+    "# Notify with playing a sound and sending an email when the computation is done\n",
+    "sound_path = '/Users/artun/Library/Mobile Documents/com~apple~CloudDocs/Documents/Research/utilities/sounds/alert-short.mp3'\n",
+    "notify(job_name=f\"n{n}_H{fielddir}_p{p}\", figure=fig, data_text=\"\", server='gmail', sound=sound_path)"
+   ]
   }
  ],
  "metadata": {
